Perubahan pada banyak hal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">javaJourney</string>
+    <string name="places_name">Nama Wisata</string>
+    <string name="description">Deskripsi</string>
+    <string name="paketdestinasi">Paket OpenTrip + Penjemputan Banyuwangi Kota</string>
 </resources>
